--- a/resource/front-envoy.yaml
+++ b/resource/front-envoy.yaml
@@ -1,9 +1,15 @@
+admin:
+  access_log_path: "/dev/null"
+  address:
+    socket_address:
+      address: 0.0.0.0
+      port_value: ADMIN_PORT
 static_resources:
   listeners:
   - address:
       socket_address:
         address: 0.0.0.0
-        port_value: 8088
+        port_value: LISTENER_PORT
     filter_chains:
     - filters:
       - name: envoy.http_connection_manager
@@ -20,26 +26,13 @@ static_resources:
               - match:
                   prefix: "/"
                 route:
-                  cluster: splunkpool
+                  cluster: cidrpool
           http_filters:
           - name: envoy.router
             config: {}
   clusters:
-  - name: splunkpool
+  - name: cidrpool
     connect_timeout: 0.25s
     type: strict_dns
     lb_policy: round_robin
     hosts:
-    - socket_address:
-        address: splunkforwarder01
-        port_value: 8088
-    - socket_address:
-        address: splunkforwarder02
-        port_value: 8088
-admin:
-  access_log_path: "/dev/null"
-  address:
-    socket_address:
-      address: 0.0.0.0
-      port_value: 8001
-
